--- a/app/src/main/res/layout/activity_user_list.xml
+++ b/app/src/main/res/layout/activity_user_list.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewmodel"
-            type="com.example.learnapp.UserListActivity" />
+            type="com.example.learnapp.app.userlist.UserListActivity" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
