--- a/app/src/main/res/layout/user_list_item.xml
+++ b/app/src/main/res/layout/user_list_item.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools"
-    xmlns:bind="http://schemas.android.com/apk/res-auto">
+    xmlns:card_view="http://schemas.android.com/tools">
 
     <data>
         <variable
-            name="viewmodel"
-            type="com.example.learnapp.UserListItemModel" />
+            name="model"
+            type="com.example.learnapp.app.userlist.UserListItemModel" />
     </data>
 
     <LinearLayout
@@ -24,6 +23,8 @@
             card_view:cardCornerRadius="1dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:clickable="true"
+                android:focusable="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="12dp">
@@ -32,7 +33,6 @@
                     android:id="@+id/iv_avatar"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    bind:avatar="@{viewmodel.avatar}"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toLeftOf="@+id/et_name"
                     app:layout_constraintTop_toTopOf="parent"
@@ -43,7 +43,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:hint="@string/name"
-                    android:text="@{viewmodel.name}"
+                    android:text="@{model.name}"
                     android:textColor="@color/colorBlack"
                     android:layout_marginStart="8dp"
                     app:layout_constraintBottom_toTopOf="@id/et_email"
@@ -56,7 +56,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:hint="@string/email"
-                    android:text="@{viewmodel.email}"
+                    android:text="@{model.email}"
                     android:textColor="@color/colorBlack"
                     android:layout_marginStart="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
